<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".ui.CollectorDetailFragment">

    <ScrollView
        android:id="@+id/collector_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/album_detail_title" />-->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1,2"
                android:shrinkColumns="0,1,2"
                android:layout_marginBottom="16dp">
                <TableRow>
                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/collector_detail_name" />
                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        android:text=""/>
                </TableRow>
                <TableRow>
                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/collector_detail_telephone" />
                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:id="@+id/telephone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        android:text=""/>
                </TableRow>
                <TableRow>
                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/collector_detail_email" />
                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:id="@+id/email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        android:text=""/>
                </TableRow>
            </TableLayout>

            <TextView
            	android:textDirection="locale"
                android:textAlignment="gravity"
                android:id="@+id/comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/collector_detail_comments"/>
            <TextView
            	android:textDirection="locale"
                android:textAlignment="gravity"
                android:id="@+id/no_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="italic"
                android:text="@string/collector_detail_no_comments"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/commentRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/comment_item"
                android:layout_marginBottom="16dp">
            </androidx.recyclerview.widget.RecyclerView>

            <TextView
            	android:textDirection="locale"
                android:textAlignment="gravity"
                android:id="@+id/favorite_performers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/collector_detail_favorite_performers"/>
            <TextView
            	android:textDirection="locale"
                android:textAlignment="gravity"
                android:id="@+id/no_favorite_performers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="italic"
                android:text="@string/collector_detail_no_favorite_performers"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/favoritePerformerRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/favorite_performer_item"
                android:layout_marginBottom="16dp">
            </androidx.recyclerview.widget.RecyclerView>

            <TextView
            	android:textDirection="locale"
                android:textAlignment="gravity"
                android:id="@+id/collector_albums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/collector_detail_collector_albums"/>
            <TextView
            	android:textDirection="locale"
                android:textAlignment="gravity"
                android:id="@+id/no_collectors_albums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="italic"
                android:text="@string/collector_detail_no_collector_albums"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/collectorAlbumRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/collector_album_item"
                android:layout_marginBottom="16dp">
            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button_collector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/teal_700"
        android:contentDescription="@string/text_void"
        app:tint="@color/white"
        app:srcCompat="@android:drawable/ic_input_add" />

</FrameLayout>