<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".ui.MusicianDetailFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="286dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/musician_detail_name" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1,1,2"
                android:shrinkColumns="1,1,2"
                android:layout_marginBottom="16dp">
                <TableRow>

                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:text="@string/musician_detail_name"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        android:text=""/>
                </TableRow>
                <TableRow>
                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/musician_detail_description" />
                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        android:text=""/>
                </TableRow>
                <TableRow>
                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/musician_detail_birthdate" />
                    <TextView
                    	android:textDirection="locale"
                    	android:textAlignment="gravity"
                        android:id="@+id/birthdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        android:text=""/>
                </TableRow>
            </TableLayout>

            <TextView
            	android:textDirection="locale"
                android:textAlignment="gravity"
                android:id="@+id/songs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/musician_detail_prizes"/>
            <TextView
            	android:textDirection="locale"
                android:textAlignment="gravity"
                android:id="@+id/no_prizes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="italic"
                android:text="@string/musician_detail_no_prizes"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/prizesRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/performer_prize_item"
                android:layout_marginBottom="16dp">
            </androidx.recyclerview.widget.RecyclerView>

            <TextView
            	android:textDirection="locale"
                android:textAlignment="gravity"
                android:id="@+id/albums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/musician_title_albums"/>
            <TextView
            	android:textDirection="locale"
                android:textAlignment="gravity"
                android:id="@+id/no_albums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="italic"
                android:text="@string/musician_detail_no_albums"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/albumsRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/musician_album_item"
                android:layout_marginBottom="16dp">
            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button_prize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/teal_700"
        android:contentDescription="@string/text_void"
        app:tint="@color/white"
        app:srcCompat="@drawable/baseline_emoji_events_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/teal_700"
        android:contentDescription="@string/text_void"
        app:tint="@color/white"
        app:srcCompat="@drawable/baseline_album_24" />
</FrameLayout>